# bazel-springboot-multiarch-oci

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  maven_install.json
src/main/java/com/example/: HelloWorld.java
