load("@rules_java//java:java_binary.bzl", "java_binary")
load("@rules_jvm_external//:defs.bzl", "artifact")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@rules_spring//springboot:springboot.bzl", "springboot")
load("//:build/transition.bzl", "multi_arch")

springboot_deps = [
    "@rules_spring//springboot/import_bundles:springboot_required_deps",
]

java_library(
    name = "lib",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**"]),
    deps = springboot_deps + [
        artifact("org.springframework.boot:spring-boot-autoconfigure"),
        artifact("org.springframework.boot:spring-boot-starter"),
    ],
)

springboot(
    name = "app",
    boot_app_class = "com.example.HelloWorld",
    boot_launcher_class = "org.springframework.boot.loader.launch.JarLauncher",
    java_library = ":lib",
)

pkg_tar(
    name = "layer",
    srcs = [":app.jar"],
)

oci_image(
    name = "image",
    base = "@distroless_java",
    entrypoint = [
        "java",
        "-jar",
        "/app.jar",
    ],
    tars = [":layer"],
)

#multi_arch(
#    name = "images",
#    image = ":image",
#    platforms = [
#        "//build/platforms:linux-x86_64",
#        "//build/platforms:linux-aarch64",
#    ],
#)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["my-repository:latest"],
)
