bazel_dep(name = "rules_java", version = "7.12.2")
bazel_dep(name = "rules_jvm_external", version = "6.6")
bazel_dep(name = "rules_oci", version = "2.2.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [],
    lock_file = "//:maven_install.json",
)
use_repo(maven, "maven")
