bazel_dep(name = "rules_java", version = "7.12.2")
bazel_dep(name = "rules_jvm_external", version = "6.6")
bazel_dep(name = "rules_oci", version = "2.2.0")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.10.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.10")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.springframework.boot:spring-boot-starter:3.2.0",
        "org.springframework.boot:spring-boot-actuator:3.2.0",
        "org.springframework.boot:spring-boot-actuator-autoconfigure:3.2.0",
        "org.springframework.boot:spring-boot-loader:3.2.0",
        "org.springframework:spring-web:6.2.1",
    ],
    lock_file = "//:maven_install.json",
)
use_repo(maven, "maven")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_java",
    digest = "sha256:903d5ad227a4afff8a207cd25c580ed059cc4006bb390eae65fb0361fc9724c3",
    image = "gcr.io/distroless/java21",
    platforms = [
        "linux/amd64",
        "linux/arm64",
        "linux/arm64/v8",
    ],
)
use_repo(oci, "distroless_java", "distroless_java_linux_amd64", "distroless_java_linux_arm64", "distroless_java_linux_arm64_v8")
